--- a/Youtube_Analytics1.ipynb
+++ b/Youtube_Analytics1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Youtube Analytics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmZRMMZ0qlY1OVKFkwlTkV",
+      "authorship_tag": "ABX9TyMBq+yeDKPHCDg6gzZTSGzF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,12 +577,12 @@
         "channel_data"
       ],
       "metadata": {
-        "id": "9SuFvXZp2CZW",
-        "outputId": "4b62125d-e759-4514-f7fe-c26e536bebb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "9SuFvXZp2CZW",
+        "outputId": "4b62125d-e759-4514-f7fe-c26e536bebb3"
       },
       "execution_count": 17,
       "outputs": [
@@ -777,12 +777,12 @@
         "playlist_id"
       ],
       "metadata": {
-        "id": "uWnqpxlv2CTB",
-        "outputId": "abb85e6d-dd13-4450-ba85-754184fb212b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "uWnqpxlv2CTB",
+        "outputId": "abb85e6d-dd13-4450-ba85-754184fb212b"
       },
       "execution_count": 19,
       "outputs": [
@@ -861,11 +861,11 @@
         "video_ids"
       ],
       "metadata": {
-        "id": "QRVQHfBc2CKP",
-        "outputId": "3c2eec25-ad24-4728-af10-a1d913c3749d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QRVQHfBc2CKP",
+        "outputId": "3c2eec25-ad24-4728-af10-a1d913c3749d"
       },
       "execution_count": 22,
       "outputs": [
@@ -1935,13 +1935,180 @@
     {
       "cell_type": "code",
       "source": [
-        "video_data = pd.DataFrame(video_details)"
+        "video_data = pd.DataFrame(video_details)\n",
+        "video_data.head()"
       ],
       "metadata": {
-        "id": "wb-GAIfa1lCX"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "wb-GAIfa1lCX",
+        "outputId": "dd6f9d66-adc7-46ca-fc43-f0c1dcc0e74a"
       },
-      "execution_count": 56,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                               Title        Published_date  \\\n",
+              "0  Gordon Ramsay Can't Find His Burger Patty | Ki...  2022-07-18T16:00:32Z   \n",
+              "1  Gordon's Best Moments In India | Part Six | Go...  2022-07-17T16:00:34Z   \n",
+              "2  Even More Dishes You Should Make At Your Next ...  2022-07-14T16:00:14Z   \n",
+              "3  Gordon Ramsay's Ultimate Slow Cooking Guide | ...  2022-07-12T16:00:13Z   \n",
+              "4                  Garlic Peeling Made Easy! #Shorts  2022-07-12T13:00:06Z   \n",
+              "\n",
+              "    Views  \n",
+              "0   56465  \n",
+              "1   64729  \n",
+              "2   99378  \n",
+              "3  101773  \n",
+              "4  105375  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-671953ce-d769-4c2f-9fe0-05cb7bac0f9e\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Title</th>\n",
+              "      <th>Published_date</th>\n",
+              "      <th>Views</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Gordon Ramsay Can't Find His Burger Patty | Ki...</td>\n",
+              "      <td>2022-07-18T16:00:32Z</td>\n",
+              "      <td>56465</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Gordon's Best Moments In India | Part Six | Go...</td>\n",
+              "      <td>2022-07-17T16:00:34Z</td>\n",
+              "      <td>64729</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Even More Dishes You Should Make At Your Next ...</td>\n",
+              "      <td>2022-07-14T16:00:14Z</td>\n",
+              "      <td>99378</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Gordon Ramsay's Ultimate Slow Cooking Guide | ...</td>\n",
+              "      <td>2022-07-12T16:00:13Z</td>\n",
+              "      <td>101773</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Garlic Peeling Made Easy! #Shorts</td>\n",
+              "      <td>2022-07-12T13:00:06Z</td>\n",
+              "      <td>105375</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-671953ce-d769-4c2f-9fe0-05cb7bac0f9e')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-671953ce-d769-4c2f-9fe0-05cb7bac0f9e button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-671953ce-d769-4c2f-9fe0-05cb7bac0f9e');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1962,12 +2129,12 @@
         "video_data.head(10)"
       ],
       "metadata": {
-        "id": "UGsi500x74Qi",
-        "outputId": "1992ed46-7a79-45b9-952c-16a2a383d885",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "UGsi500x74Qi",
+        "outputId": "1992ed46-7a79-45b9-952c-16a2a383d885"
       },
       "execution_count": 58,
       "outputs": [
@@ -2168,11 +2335,11 @@
         "print(total_views)"
       ],
       "metadata": {
-        "id": "r_sA5PwO_USp",
-        "outputId": "147a15e0-7f98-4bd5-d10f-bc699de3460d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r_sA5PwO_USp",
+        "outputId": "147a15e0-7f98-4bd5-d10f-bc699de3460d"
       },
       "execution_count": 72,
       "outputs": [
@@ -2202,12 +2369,12 @@
         "top10_videos"
       ],
       "metadata": {
-        "id": "BuPhkBN--FtC",
-        "outputId": "0a50361a-a50c-4c62-8931-f27d9821b5e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
-        }
+          "height": 321
+        },
+        "id": "BuPhkBN--FtC",
+        "outputId": "0a50361a-a50c-4c62-8931-f27d9821b5e0"
       },
       "execution_count": 66,
       "outputs": [
@@ -2419,11 +2586,11 @@
         "top10_videos.iloc[0].loc[['Title' , 'Views']]"
       ],
       "metadata": {
-        "id": "lxUouax888HQ",
-        "outputId": "8dbf9a86-62d4-4a58-8a0b-caf92d97a67d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lxUouax888HQ",
+        "outputId": "8dbf9a86-62d4-4a58-8a0b-caf92d97a67d"
       },
       "execution_count": 69,
       "outputs": [
@@ -2447,11 +2614,11 @@
         "print(len(video_data))"
       ],
       "metadata": {
-        "id": "TboIjyWT8-HO",
-        "outputId": "6f84200a-d2ff-4b9b-c403-37ee4975fac7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TboIjyWT8-HO",
+        "outputId": "6f84200a-d2ff-4b9b-c403-37ee4975fac7"
       },
       "execution_count": 62,
       "outputs": [
@@ -2470,12 +2637,12 @@
         "ax1 = sns.barplot(x='Views', y='Title', data=top10_videos)"
       ],
       "metadata": {
-        "id": "5K8SydOe9HIi",
-        "outputId": "391eca27-9327-45f7-e97a-72e6bcc8fef4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 502
-        }
+        },
+        "id": "5K8SydOe9HIi",
+        "outputId": "391eca27-9327-45f7-e97a-72e6bcc8fef4"
       },
       "execution_count": 70,
       "outputs": [
@@ -2497,7 +2664,7 @@
         ""
       ],
       "metadata": {
-        "id": "TUs8JNRN_Cn7"
+        "id": "A7OA2fzxEx6o"
       },
       "execution_count": null,
       "outputs": []
